# vixal_auto

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  flows.txt  pyproject.toml
.github/workflows/: docker-publish.yml
app/: config.py  jobs.py  main.py  pipeline.py  uploader.py  vixal_client.py
app/templates/: index.html
scripts/: login.py
